--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
-    android:gravity="left"
-    android:textColor="@color/standard_white"
-    android:padding="5dip"
     android:background="@android:color/transparent"
-    />
+    android:gravity="left"
+    android:padding="5dip"
+    android:textColor="@color/standard_white"
+    android:textSize="20sp" />
